k8s/mysql.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: eswj
spec:
  type: ExternalName
  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
  externalName: mysql.prod.svc.cluster.local
