k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: eswj-ingress
  namespace: eswj
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - blog.everysecondwithjesus.org
      secretName: blog.everysecondwithjesus.org-tls
  rules:
    - host: blog.everysecondwithjesus.org
      http:
        paths:
          - backend:
              serviceName: eswj-cms
              servicePort: 80
